COCA v1.5 - Added image in ReadMe

--- a/COCA.ipynb
+++ b/COCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "id": "1b79ac28",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "90ea6642",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "id": "bcfbd94b",
    "metadata": {},
    "outputs": [
@@ -104,11 +104,11 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x132f7a52438>,\n",
-       " <matplotlib.lines.Line2D at 0x132e8a24780>]"
+       "[<matplotlib.lines.Line2D at 0x2845ed1fda0>,\n",
+       " <matplotlib.lines.Line2D at 0x2845eded0f0>]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
